# __2026_06_17_playwirght__

./: .gitignore  README.md  main.py  opencode.json  pyproject.toml  requirements.txt
4台灣即時股票資訊_tkinter/: README.md  stock_gui.py
lesson/: lesson1.ipynb
lesson10/: README.md  app.py  core.py  gui.py  login_demo.html  practice1.py  practice2.py  practice3.ipynb  practice3.py  practice4.py  practice5.py  practice6.md  practice6.py  practice7.md  practice7.py  test.py
lesson11/: practice1.py  practice1_code_review.md  practice1_gradio.py
lesson3/: lesson3_1.ipynb  lesson3_2.py
lesson5/: practice1.ipynb  practice2.ipynb
lesson5/.ipynb_checkpoints/: practice1-checkpoint.ipynb  practice2-checkpoint.ipynb
lesson6/: practice1.ipynb  practice2.py
lesson7/: practice1.ipynb  practice2.ipynb
lesson8/: guess_game_gui.py  practice1.ipynb  practice2.ipynb  practice2.py  practice2_gui.py  practice3.py
lesson9/: file1.txt  practice1.ipynb  practice1.py  practice2.py  practice3.py
link/: README.md
tests/: test_practice5.py
