[project]
name = "2026-06-17-playwirght"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pillow>=11.3.0",
    "playwright>=1.61.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.11.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "jupyterlab-lsp>=5.3.0",
]
